# hubitatcontrol

./: .dockerignore  .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Hubitat.py  LICENSE  Pipfile  README.md  SECURITY.md  Taskfile.yaml  packages.dot  pyproject.toml  setup.cfg  techstack.md  techstack.yml  test_main.py
.github/workflows/: coveralls.yml  docker-image.yml  release_gen.yml  test.yml
docs/: classes.dot  index.rst  packages.dot
docs/hubitatcontrol/: cli.md  environment.md  generic.md  hub.md  hubitatcontrol.md  index.md  lights.md  main.md  sensors.md
docs/src/: hubitatcontrol.md  index.md  lights.md  main.md
hubitatcontrol/: __init__.py  __main__.py  cli.py  environment.py  generic.py  hub.py  lights.py  main.py  sensors.py
src/: HubitatMaker.py  hubitatcontrol.py  lights.py  main.py
src/hubitatcontrol/: __init__.py  lights.py
tests/: test_cli.py  test_main.py
