[tool.poetry]
name = "hubitatcontrol"
version = "v3.0.1"
description = "Hubitat Maker API Interface"
authors = ["Jesse Schoepfer <jelloeater@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://pypi.org/project/hubitatcontrol"
repository = "https://github.com/Jelloeater/hubitatcontrol"
documentation = "https://github.com/Jelloeater/hubitatcontrol/tree/main/docs"
keywords = ["hubitat", "makerapi","requests"]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: No Input/Output (Daemon)",
 "Topic :: Home Automation",
 "Intended Audience :: Developers",
 "Operating System :: OS Independent",
]

[tool.poetry.scripts]
hubitatcontrol = "hubitatcontrol.__main__:app"


[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
typer = "*"
prettytable = "*"
keyring = "^23.13.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "test/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = [
    "tests/*",
    ]


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
exclude =['./tests']
max-line-length = 120
count = false
statistics = true
diff = true
format = "pylint"

[tool.autoflake]
check = true
in-place = true
expand-star-imports = false
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = false
recursive = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 120
profile = "black"

[tool.tartufo]
repo-path = "."
regex = true
entropy = true
exclude-path-patterns = [
 {path-pattern = 'poetry\.lock'},
 {path-pattern = 'pyproject\.toml'},
 # To not have to escape `\` in regexes, use single quoted
 # TOML 'literal strings'
 {path-pattern = 'docs/source/(.*)\.rst'},
]
exclude-entropy-patterns = [
    {path-pattern = '\.github/workflows/.*\.yml', pattern = 'uses: .*@[a-zA-Z0-9]{40}', reason = 'GitHub Actions'},
    {path-pattern = 'poetry\.lock', pattern = '.'},
    {path-pattern = 'Pipfile\.lock', pattern = '.'},
    {path-pattern = 'README\.md', pattern = '.'},
    {path-pattern = 'index\.rst', pattern = '.'},
    {path-pattern = 'techstack\.yml', pattern = '.'},
    {path-pattern = 'techstack\.md', pattern = '.'},

]

[tool.poetry.group.test.dependencies]
setuptools = "*"
pytest = "*"
pytest-cov = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest-pycharm = "*"
autoflake = "*"
pre-commit = "*"
vulture = "*"
isort = "*"
xenon = "*"
black = "*"
typing_extensions ="*"
#typeguard ="*" # Typing
#mypy = "*" # Typing
pdoc3 = "*"
pylint = "*"
bandit = "*"
whispers = "*"
mdformat-gfm ="*"
mdformat-frontmatter ="*"
flake8 = "*"
Flake8-pyproject="*"
tartufo="*"
mdToRst = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
